--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ visualise Country wise, Region wise and Overall Co2 Emission on Earth.
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Phaneendra Varma</span></strong>. All Rights Reserved
+        &copy; Copyright, All Rights Reserved
       </div>
       <div class="credits">
         
