--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <h2>Unearthing the Environmental Impact of Human Activity</h2>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
-        <a href="https://youtu.be/J4CISuCe9h8" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+        <a href="https://youtu.be/yJCT3VhdKmI" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
       </div>
     </div>
   </section><!-- End Hero -->
